--- a/pom.xml
+++ b/pom.xml
@@ -49,10 +49,13 @@
 <!--			<groupId>org.springframework.cloud</groupId>-->
 <!--			<artifactId>spring-cloud-starter-config</artifactId>-->
 <!--		</dependency>-->
+		<!-- Começo Eureka -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+		<!-- Fim Eureka -->
+		<!-- Começo bd -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -73,6 +76,22 @@
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-mysql</artifactId>
 		</dependency>
+		<!-- Fim bd -->
+		<!-- Começo Swagger -->
+		<dependency>
+			<groupId>org.springdoc</groupId> <!-- http://localhost:8001/v3/api-docs -->
+			<!-- Se usar essa versão dá erro de incompactibilidade com o webmvc-ui -->
+			<!--			<artifactId>springdoc-openapi-webmvc-core</artifactId>-->
+			<!--			<version>1.8.0</version>-->
+			<artifactId>springdoc-openapi-starter-common</artifactId>
+			<version>2.8.8</version> <!-- Dá erro se não colocar a versão pois o springboot não gerencia por padrão! -->
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId> <!-- http://localhost:8001/swagger-ui.html -->
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.8</version><!-- Dá erro se não colocar a versão pois o springboot não gerencia por padrão! -->
+		</dependency>
+		<!-- Fim Swagger -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
