--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,10 +18,22 @@ spring:
         dialect: org.hibernate.dialect.MySQLDialect
 
   flyway:
-    url: jdbc:mysql://localhost:3306
-    schemas: cambio_service
+    url: jdbc:mysql://localhost:3306/cambio_service?createDatabaseIfNotExist=true&useSSL=false&useTimezone=true&serverTimezone=UTC
+#    url: jdbc:mysql://localhost:3306
+#    schemas: cambio_service
     user: root
     password: admin123
+
+management:
+  tracing:
+    sampling: # definindo % das amostras
+      probability: 1 #5% quando for pra produção
+  #Para evitar o erro:
+  #2025-05-28T18:14:48.603-03:00 WARN 1 --- [ms-cambio-service] [/api/v2/spans}}] [ ] z.r.i.AsyncReporter$BoundedAsyncReporter : Spans were dropped due to exceptions. All subsequent errors will be logged at FINE level.
+  #2025-05-28T18:14:48.603-03:00 WARN 1 --- [ms-cambio-service] [/api/v2/spans}}] [ ] z.r.i.AsyncReporter$BoundedAsyncReporter : Dropped 2 spans due to ResourceAccessException(I/O error on POST request for "http://localhost:9411/api/v2/spans": Connect to http://localhost:9411⁠ [localhost/127.0.0.1, localhost/0:0:0:0:0:0:0:1] failed: Connection refused)
+  zipkin:
+    tracing:
+      endpoint: ${SPRING_ZIPKIN_BASEURL:http://localhost:9411/}api/v2/spans
 
 server:
   port: 8000
@@ -44,11 +56,14 @@ eureka:
   #Essa configuração vai alterar o XML de configuração do eureka conforme a imagem ErroFaltaInstanceHostanmeMS.png.
   #Outra opção é gerar a configuração no arquivo C:\Windows\System32\drivers\etc\hosts apontando Raphael-PC.mshome.net para localhost
   instance:
-    hostname: localhost #Raphael-PC.mshome.net
+#    hostname: localhost #Raphael-PC.mshome.net
+    prefer-ip-address: true
+    hostname: ${HOSTNAME:localhost}
+    instance-id: ${spring.application.name}:${HOSTNAME:localhost}:${server.port}
 
 springdoc:
   show-actuator: true
   api-docs:
-    path: cambio-service/v3/api-docs
+    path: /cambio-service/v3/api-docs
 #  swagger-ui:
 #    path: /swagger-ui.html
